--- a/css/_popup_menu.scss
+++ b/css/_popup_menu.scss
@@ -61,7 +61,7 @@
             width: 100%;
 
             .popupmenu__slider {
-                position: absolute;
+                position: relative;
                 top: 50%;
                 transform: translate(0, -50%);
                 width: 100%;
